--- a/.github/workflows/Destry.yml
+++ b/.github/workflows/Destry.yml
@@ -1,20 +1,10 @@
-name: CD
+name: Destry All Resources
 
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-env:
-  AWS_ACCOUNT_ID: 464960403606
-
-concurrency:
-  group: CD-workflow
+  workflow_dispatch:
 
 jobs:
-  deployment:
+  destroy:
     runs-on: ubuntu-latest
     environment: development
     strategy:
@@ -32,10 +22,6 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v4
 
-        # - name: Print File Structure
-        #   run: |
-        #     ls /home/runner/work/fire-calculator-infra/fire-calculator-infra/./apps/development-environment/ap-southeast-2
-
         - name: Authenticate with AWS
           uses: aws-actions/configure-aws-credentials@v3
           with: 
@@ -51,14 +37,6 @@ jobs:
           run: |
             terraform init
 
-        - name: Terraform Validate
+        - name: Terraform Destroy
           run: |
-            terraform validate
-
-        - name: Terraform Plan
-          run: |
-            terraform plan
-
-        - name: Terraform Apply
-          run: |
-            terraform apply -auto-approve
+            terraform destroy -auto-approve
