--- a/.github/workflows/Destry.yml
+++ b/.github/workflows/Destry.yml
@@ -2,11 +2,16 @@ name: Destry All Resources
 
 on:
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        required: true
+        default: 'development'
 
 jobs:
   destroy:
     runs-on: ubuntu-latest
-    environment: development
+    environment: ${{ inputs.environment }} 
     strategy:
       matrix:
         TF_VAR_aws_region: [ "ap-southeast-2" ]
@@ -26,7 +31,7 @@ jobs:
           uses: aws-actions/configure-aws-credentials@v3
           with: 
             aws-region: ${{ env.TF_VAR_aws_region }}
-            role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/fire-calculator-infra-oidc-role
+            role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/fire-calculator-infra-oidc-role
 
         - name: Set up Terraform
           uses: hashicorp/setup-terraform@v3
