--- a/.github/workflows/Destry.yml
+++ b/.github/workflows/Destry.yml
@@ -17,6 +17,8 @@ jobs:
         TF_VAR_aws_region: [ "ap-southeast-2" ]
     env:
       TF_VAR_aws_region: ${{ matrix.TF_VAR_aws_region }}
+      TF_VAR_db_username: ${{ secrets.DB_USERNAME }}
+      TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
     permissions:
       contents: read
       id-token: write
